--- a/style.css
+++ b/style.css
@@ -1,16 +1,45 @@
 body {
-    font-size: 15pt;
+    display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100hv;
 	background-color: #E0FFFF;
-	height: 300px;
-	width: 300px;
 }
 .row {
-    margin-bottom:10px;
-	margin-left: 30px;
-	margin-top: 30px;
-    width:300px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	background-color: #f0f5f0;
+	border-radius: 5px;
 }
-    .row label {
-        display:block;
-        font-weight: bold;
-    }
+.auth {
+	font-family: arial;
+	font-size: 30px;
+	color: 	#9400D3;
+	text-transform: uppercase;
+	padding: 0 20px;
+}
+.row input {
+	font-size: 18px;
+	padding: 5px;
+	margin: 5px 0;
+	outline-color: 	#9400D3;
+}
+.btn-submit input {
+	font-size: 25px;
+	text-transform: uppercase;
+	font-family: arial;
+	font-weight: bold;
+	margin-top: 5px;
+	margin-bottom: 15px;
+	padding: 5px 70 px;
+	color: #fff;
+	background-color: #9400D3;
+}
+.instruction {
+    font-size:70%;
+    color:#aaaaaa;
+    margin-left:2px;
+    cursor:default;
+}
